Template/Keil5_project/build_output.log
*** Using Compiler 'V6.24', folder: 'd:\Users\xuan\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
Rebuild target 'GD32F30X_HD'
compiling gd32f30x_gpio.c...
compiling systick.c...
compiling gd32f30x_misc.c...
compiling gd32f30x_it.c...
compiling system_gd32f30x.c...
compiling lcd.c...
compiling gd32f30x_rcu.c...
compiling gd32f30x_dma.c...
compiling gd32f30x_spi.c...
../main.c(3): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0\lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling main.c...
assembling startup_gd32f30x_hd.s...
compiling gd32f30x_fmc.c...
compiling gd32f30x_usart.c...
compiling gd32f30x_timer.c...
compiling lv_group.c...
compiling lv_obj_id_builtin.c...
compiling lv_obj_class.c...
compiling lv_obj_event.c...
compiling lv_obj_property.c...
compiling lv_obj.c...
compiling lv_obj_draw.c...
compiling lv_obj_scroll.c...
compiling lv_obj_style_gen.c...
compiling lv_draw_arc.c...
compiling lv_draw_image.c...
compiling lv_draw.c...
compiling lv_obj_tree.c...
compiling lv_obj_pos.c...
compiling lv_refr.c...
compiling lv_draw_buf.c...
compiling lv_display.c...
compiling lv_obj_style.c...
compiling lv_draw_mask.c...
compiling lv_draw_triangle.c...
compiling lv_draw_line.c...
compiling lv_draw_sw_blend.c...
compiling lv_image_decoder.c...
compiling lv_draw_label.c...
compiling lv_draw_rect.c...
compiling lv_draw_sw_arc.c...
compiling lv_draw_sw.c...
compiling lv_draw_sw_blend_to_argb8888.c...
compiling lv_draw_sw_blend_to_rgb888.c...
compiling lv_draw_sw_border.c...
compiling lv_draw_sw_blend_to_rgb565.c...
compiling lv_draw_sw_gradient.c...
compiling lv_draw_sw_letter.c...
compiling lv_draw_sw_fill.c...
compiling lv_draw_sw_img.c...
compiling lv_draw_sw_box_shadow.c...
compiling lv_draw_sw_mask_rect.c...
compiling lv_draw_sw_line.c...
compiling lv_font.c...
compiling lv_draw_sw_triangle.c...
compiling lv_font_fmt_txt.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/font/lv_font_montserrat_14.c(10): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/font\../../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/font\../..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_font_montserrat_14.c...
compiling lv_draw_sw_mask.c...
compiling lv_freetype.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/font/lv_font_montserrat_24.c(10): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/font\../../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/font\../..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_font_montserrat_24.c...
compiling lv_draw_sw_transform.c...
compiling lv_layout.c...
compiling lv_indev_scroll.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype/lv_freetype_glyph.c(10): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../../lvgl.h(16): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../..\../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../..\..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_freetype_glyph.c...
compiling lv_rle.c...
compiling lv_flex.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype/lv_freetype_image.c(10): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../../lvgl.h(16): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../..\../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../..\..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_freetype_image.c...
compiling lv_indev.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype/lv_freetype_outline.c(10): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../../lvgl.h(16): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../..\../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../..\..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_freetype_outline.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype/lv_ftsystem.c(10): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../../../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/libs/freetype\../../..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_ftsystem.c...
compiling lv_cache.c...
compiling _lv_cache_lru_rb.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/lv_init.c(19): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src\libs/gif/lv_gif.h(17): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src\libs/gif\../../../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src\libs/gif\../../..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_init.c...
compiling lv_cache_entry.c...
compiling lv_anim_timeline.c...
compiling lv_image_cache.c...
compiling lv_array.c...
compiling lv_anim.c...
compiling lv_color_op.c...
compiling lv_async.c...
compiling lv_area.c...
compiling lv_color.c...
compiling lv_ll.c...
compiling lv_palette.c...
compiling lv_event.c...
compiling lv_lru.c...
compiling lv_fs.c...
compiling lv_math.c...
compiling lv_os_none.c...
compiling lv_utils.c...
compiling lv_rb.c...
compiling lv_style_gen.c...
compiling lv_style.c...
compiling lv_timer.c...
compiling lv_string_builtin.c...
compiling lv_mem_core_builtin.c...
compiling lv_text.c...
compiling lv_sprintf_builtin.c...
compiling lv_button.c...
compiling lv_tlsf.c...
compiling lv_mem.c...
compiling lv_tick.c...
compiling lv_switch.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/themes/lv_theme.c(9): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/themes\../../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/themes\../..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_theme.c...
../../Utilities/Third_Party/lvgl-9.1.0/src/themes/simple/lv_theme_simple.c(9): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/themes/simple\../../../lvgl.h(119): warning: In file included from...../../Utilities/Third_Party/lvgl-9.1.0/src/themes/simple\../../..\src/lv_api_map_v8.h(55): error: unknown type name 'lv_buttonmatrix_ctrl_t'
   55 | typedef lv_buttonmatrix_ctrl_t      lv_btnmatrix_ctrl_t;
      |         ^
1 error generated.
compiling lv_theme_simple.c...
compiling lv_imagebutton.c...
compiling lv_list.c...
compiling lv_image.c...
compiling lv_label.c...
".\output\Project.axf" - 10 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:04
